--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+* {
+  padding: 0;
+  margin: 0;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +38,139 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.list-inline {
+  display: flex;
+  margin-top: 36px;
+  width: 100%;
+  flex-wrap: wrap;
+  font-size: 0;
+}
+.list-inline > li {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex: 6;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  cursor: pointer;
+  justify-content: space-around;
+  border: 1px solid #ccc;
+}
+.list-inline > li > img {
+  max-width: 250px;
+  display: flex;
+  margin: 12px auto;
+}
+a {
+  text-decoration: none;
+}
+.list-inline > li > a > p {
+  margin-top: 14px;
+  font-size: 24px;
+  color: blue;
+  margin: 0px auto 36px;
+  text-align: center;
+}
+.row {
+  margin: 0px;
+  --bs-gutter-x: 0;
+}
+.img_ca {
+  max-width: 200px;
+}
+.cattext {
+  font-weight: 700;
+  color: rgb(48, 74, 150);
+  font-size: 24px;
+}
+.prodcuindo {
+  max-width: 95%;
+  margin-right: 4%;
+}
+.pd-info {
+  margin: 32px auto !important;
+}
+.tsg {
+  font-size: 16px;
+  text-decoration: line-through;
+}
+.tsgs {
+  font-size: 20px;
+  margin-left: 36px;
+}
+.cp {
+  cursor: pointer;
+}
+.dis {
+  display: flex;
+}
+.cart-img img {
+  width: 180px;
+}
+
+.cart-info {
+  margin-left: 16px;
+}
+.cart-info h6 {
+  font-size: 16px;
+}
+.cart-info p {
+  font-size: 13px;
+}
+.ml-24 {
+  margin-left: 24px !important;
+  padding: 16px;
+}
+.flexcon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 16px;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+}
+.applybtn {
+  background-color: rgb(175 227 175);
+  border: 1px solid #023702;
+  text-align: center;
+  padding: 6px 20px;
+  color: #000;
+  border-radius: 4px;
+}
+.noteligible {
+  background-color: #ccc;
+  border: 1px solid #ccc;
+  text-align: center;
+  padding: 6px 20px;
+  color: #000;
+  pointer-events: none;
+  border-radius: 4px;
+}
+.qunup {
+  position: relative;
+  /* border: 1px solid #ccc; */
+  padding: 0;
+  width: 100px;
+  height: 36px;
+  line-height: 36px;
+}
+.plus,
+.minus {
+  width: 33.33%;
+  background: #ccc;
+  display: inline-block;
+  font-size: 14px;
+  text-align: center;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+.qun {
+  width: 33.33%;
+  background: #fff;
+  display: inline-block;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  text-align: center;
 }
